# Gallery

./: .gitignore  CMakeLists.txt  README.md  main.cpp
App/: App.cpp  App.h  CMakeLists.txt
ConsoleMenu/: CMakeLists.txt  CMenu.cpp  CMenu.h  ItemMenu.cpp  ItemMenu.h
Global/: CMakeLists.txt  config.cpp  config.h
Models/: CMakeLists.txt
Models/Account/: Account.cpp  Account.h
Models/Album/: Album.cpp  Album.h
Models/Photo/: Photo.cpp  Photo.h
Screen/: CMakeLists.txt  InterfaceScreen.cpp  InterfaceScreen.h
Screen/AccountList/: AccountList.cpp  AccountList.h
Screen/AlbumList/: AlbumList.cpp  AlbumList.h
Screen/Auth/: Auth.cpp  Auth.h
Screen/Main/: Main.cpp  Main.h
Screen/PhotoList/: PhotoList.cpp  PhotoList.h
Storage/: CMakeLists.txt  Storage.cpp  Storage.h
Storage/Action/: Action.cpp  Action.h
Storage/ActionTypes/: ActionTypes.cpp  ActionTypes.h
Storage/State/: State.cpp  State.h
Utility/: CMakeLists.txt  Utility.cpp  Utility.h
Utility/TablePrint/: TablePrint.cpp  TablePrint.h
Utility/cereal/: access.hpp  cereal.hpp  macros.hpp  specialize.hpp
Utility/cereal/archives/: binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
Utility/cereal/details/: helpers.hpp  polymorphic_impl.hpp  static_object.hpp  traits.hpp
Utility/cereal/types/: atomic.hpp  base_class.hpp  bitset.hpp  boost_variant.hpp  common.hpp  memory.hpp  optional.hpp  polymorphic.hpp  string.hpp  tuple.hpp  variant.hpp  vector.hpp
